[footer] add newsletter link into footer + fix responsive issues on small screen + add translations (sk/en/cs)

--- a/public/css/less/custom.less
+++ b/public/css/less/custom.less
@@ -488,13 +488,8 @@ table a:not(.btn):not(.readmore-js-toggle):not(.no-border), .attributes a:not(.b
 }
 
 .footer {
-    padding: 10px;
     .fa {
       margin-right: 10px;
-    }
-    p {
-        font-size: 12px;
-        margin: 0;
     }
 }
 
@@ -539,6 +534,11 @@ p.medium {
 
 .top-space {
     margin-top: 20px;
+}
+
+.space {
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .navbar .navbar-brand{
